<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Tesitoo</string>

    <string name="currency_symbol">$</string>
    <string name="padding">26</string>
    <string name="padding_20">20</string>
    <string name="padding_18">18</string>
    <string name="bundle_product_key">key_product_parcel</string>
    <string name="bundle_seller_key">key_seller_parcel</string>
    <string name="bundle_order_product_key">key_order_product_parcel</string>
    <string name="action_settings">Settings</string>
    <string name="automatic_login_key">automatic_login_parcel</string>
    <string name="automatic_login_token">automatic_login_token_parcel</string>

    <string name="title_activity_order">Order Details</string>
    <string name="register_successful">Registered successfully, welcome!</string>
    <string name="EditImages">Edit Images</string>

    <string name="order_id">Order id</string>
    <string name="total_price">Total Price</string>
    <string name="order_status">Status</string>
    <string name="date_order_placed">Order Date</string>
    <string name="order_see_more_details">See Details</string>
    <string name="order_item_count_singular">Item</string>
    <string name="order_item_count_plural">Items</string>

    <string name="customer_id">Customer Id</string>
    <string name="customer_name">Customer</string>
    <string name="customer_telephone">Telephone</string>
    <string name="customer_email">Email</string>
    <string name="customer_address">Address</string>

    <string name="order_edit_product_status">Change Status</string>
    <string name="order_edit_status_submit">Submit</string>
    <string name="order_edit_status_cancel">Cancel</string>

    <string name="product_id">Product id</string>
    <string name="product_unit_price">Unit Price</string>
    <string name="product_name">Product Name</string>
    <string name="product_status">Product Status</string>
    <string name="product_model">Model</string>
    <string name="product_quantity">Quantity</string>

    <string name="profile_updated">Profile Updated</string>
    <string name="password_updated">Password Updated</string>

    <string name="profile_city_label">Town</string>
    <string name="profile_name_label">First Name</string>
    <string name="profile_last_name_label">Last Name</string>
    <string name="profile_business_label">Business</string>
    <string name="profile_description_label">Description</string>
    <string name="profile_description_label_hint">Enter Business Description</string>
    <string name="profile_phone_label">Phone</string>
    <string name="profile_region_label">Region</string>
    <string name="profile_country_label">Country</string>
    <string name="profile_address_label">Address</string>
    <string name="profile_address_label_hint">Enter Address</string>
    <string name="profile_default_business">Name of business</string>
    <string name="profile_email_label_hint">seller@gmail.com</string>
    <string name="profile_email_label">Email</string>

    <string name="profile_picture_action">Change profile picture</string>
    <string name="profile_password_action">Change password</string>
    <string name="profile_no_changes_message">There is no changes to update</string>

    <string name="forgot_password_request">An email has been sent with password reset instructions.</string>
    <string name="forgot_password_request_error">An error has occurred. Please try again !</string>
    <string name="admin_email">admin@tesitoo.com</string>
    <string name="admin_phone_line1">+2207150195</string>
    <string name="admin_phone_line2">+2203243870</string>
    <string name="admin_address_line1">Jimpex Road, Kanifing,</string>
    <string name="admin_address_line2">Serekunda</string>
    <string name="admin_address_line3">KSM</string>
    <string name="admin_address_line4">The Gambia</string>

    <string name="info_about_us">Tesitoo is a market place provider for agricultural goods in the Gambia.
        We connect small scale farmers and producers directly to consumers through the Tesitoo app
        and web base platform. By this, disrupt the unfair traditional market control by intermediaries and
        put local farmers at the center stage of the value chain of the country’s agriculture industry.
        Our mission is to create market opportunities for local farmers and producers and ensuring
        that consumers can buy healthy local products for less leading to tremendous social and economic
        impact for farmers and consumers alike.
    </string>

    <string name="msg_permission_sorry">Please provide permission to continue !</string>

    <string name="registration_terms">I have read and accepted terms and condition</string>
    <string name="registration_terms_view">View</string>
    <string name="registration_terms_error">You have to accept terms and condition</string>

    <!--New product strings-->
    <string name="title_activity_add_product">New Product</string>

    <string name="menu_action_cancel">Cancel</string>

    <string name="action_preview">Preview</string>
    <string name="action_next">Next</string>
    <string name="action_prev">Back</string>
    <string name="action_submit">Submit</string>

    <string name="product_details_name">Product Name</string>
    <string name="product_details_description">Description</string>
    <string name="product_details_location">Location</string>
    <string name="product_details_expiration">Expiration Date</string>

    <string name="product_details_category">Category</string>
    <string name="product_details_price_per_unit">Price per Unit</string>
    <string name="product_details_quantity">Quantity</string>
    <string name="product_details_si_unit">Units</string>
    <string name="product_details_select">Please select</string>

    <string name="product_details_photo">Pictures</string>

    <string name="product_details_photo_message_action_camera">Take a picture</string>
    <string name="product_details_photo_message_action_gallery">Pick from gallery</string>
    <string name="product_details_photo_message_action_remove">Remove picture</string>
    <string name="product_details_photo_message_action_cancel">Cancel</string>

    <string name="product_add_submitting">Submitting new product</string>
    <string name="product_add_incomplete_product">Please provide missing product details</string>
    <string name="product_add_error">Error submitting product. Please try again</string>
    <string name="product_add_done">New Product Added</string>


    <!-- FAQ Strings -->
    <string name="text_expanded">Expanded</string>
    <string name="text_collapsed">Collapsed</string>
    <string name="other_questions">Do you have any other questions? \n\n Please click here to send us your question</string>

    <!--String Array of Questions-->
    <string-array name="Questions">
    <item>HOW DOES TESITOO WORK?</item>
    <item>WHAT ARE THE STEPS TO POST AND PURCHASE PRODUCTS ON THE TESITOO PLATFORM?</item>
    <item>HOW CAN I PURCHASE A PRODUCT?</item>
    <item>WHO CAN JOIN TESITOO?</item>
    <item>HOW ARE PARTNERS PAID?</item>
        <item>WHO CAN PURCHASE PRODUCTS?</item>
        <item>I PURCHASED A PRODUCT.  CAN I PICK IT UP MYSELF FROM THE STORE OR FARMLAND?</item>
    <item>DO YOU DELIVER TO THE ENTIRE COUNTRY?</item>
    <item>WHAT IS THE DURATION OF THE DELIVERY PERIOD?</item>
    <item>HOW CAN I PAY FOR PURCHASED PRODUCTS?</item>
        <item>MORE QUESTIONS?</item>

    </string-array>

    <string name="Answer1">We work with networks of farmers and dealers to bring local agricultural products to the door steps of consumers
        in the Gambia. We offer up to date information on the agriculture value chain, including daily market prices.</string>
    <string name="Answer2">Here are sample steps: \n\n
        Step 1: Farmers, dealers or producers post their products online.  This can be done with the help of a Tesitoo agent if needed.\n\n
        Step 2: Consumer browses through a list of products and makes an order.\n\n
        Step 3: Product is shipped to the consumer or the consumer picks the product up at the stores.\n\n
        Step 4: Farmers and consumers receive notification at each step of the transaction from purchase to delivery.
        </string>
    <string name="Answer3">It’s simple! Browse through the list of products and click purchase. The system will take you through the process.</string>
    <string name="Answer4">Tesitoo is open to small scale local dealers, farmers or producers of agricultural goods in the Gambia. </string>
    <string name="Answer5">Partners are paid once the buyer receives the product purchased in the required conditions. The period of payment can be weekly or monthly.  </string>
    <string name="Answer6">Anyone can purchase products on the Tesitoo platform from individuals to businesses such as hotels, supermarkets etc.</string>
    <string name="Answer7">Yes, on checkout, you have an option to have the product delivered to you for additional charges, or you can go pick it up yourself from the store or farmland.</string>
    <string name="Answer8">Due to logistical reasons, delivery services for now are only available for Banjul, Kanifing Municipality and West Coast region.</string>
    <string name="Answer9">Purchased products can reach the buyer within 24 hours during working days. </string>
    <string name="Answer10">Purchased products at the moment can only be paid by cheque, bank transfer or cash.</string>
    <string name="Answer11">Contact Us</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="faq">FAQ</string>
    <string name="frequently_asked_questions">Frequently Asked Questions</string>
    <string name="email">EMAIL</string>
    <string name="address">ADDRESS</string>
    <string name="telephone">TELEPHONE</string>
    <string name="login">Login</string>

</resources>
