<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/gray_background"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/new_product_page_height"
        android:background="@color/md_white_1000"
        android:orientation="vertical"
        android:padding="@dimen/new_product_page_padding">

        <TextView
            style="@style/ProfileTextTitleTheme"
            android:text="@string/product_details_name" />

        <EditText
            android:id="@+id/etProductName"
            style="@style/ProfileEditTextSingleLine"
            android:inputType="textAutoCorrect" />

        <TextView
            style="@style/ProfileTextTitleTheme"
            android:text="@string/product_details_description" />

        <EditText
            android:id="@+id/etProductDescription"
            style="@style/ProfileEditTextTheme"
            android:inputType="textMultiLine" />

        <TextView
            style="@style/ProfileTextTitleTheme"
            android:text="@string/product_details_location" />

        <EditText
            android:id="@+id/etProductLocation"
            style="@style/ProfileEditTextSingleLine"
            android:inputType="textAutoCorrect" />

        <TextView
            style="@style/ProfileTextTitleTheme"
            android:text="@string/product_details_expiration" />

        <EditText
            android:id="@+id/tvProductExpiration"
            style="@style/ProfileEditTextSingleLine"
            android:inputType="date" />
    </LinearLayout>
</LinearLayout>
