<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:background="@color/gray_background"
android:descendantFocusability="beforeDescendants"
android:focusableInTouchMode="true">

<LinearLayout
    android:id="@+id/view_profile_relative_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:background="@color/md_white_1000"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <ImageView
            android:id="@+id/profileImage"
            android:layout_width="@dimen/profile_picture_size"
            android:layout_height="@dimen/profile_picture_size"
            android:src="@drawable/ic_launcher" />

        <TextView
            android:id="@+id/tvFirstName"
            style="@style/ProfileTextViewOnlyTitleThemeCenter" />

        <TextView
            android:id="@+id/tvLastName"
            style="@style/ProfileTextViewOnlyTitleThemeCenter" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:paddingStart="@dimen/activity_horizontal_margin">

        <TextView
            style="@style/ProfileTextViewOnlyTitleTheme"
            android:text="@string/profile_business_label" />

        <TextView
            android:id="@+id/tvBusiness"
            style="@style/ProfileTextViewOnlySingleLine" />

        <TextView
            style="@style/ProfileTextViewOnlyTitleTheme"
            android:text="@string/profile_description_label" />

        <TextView
            android:id="@+id/tvDescription"
            style="@style/ProfileEditTextTheme" />

        <TextView
            style="@style/ProfileTextViewOnlyTitleTheme"
            android:text="@string/profile_phone_label" />

        <TextView
            android:id="@+id/tvPhone"
            style="@style/ProfileTextViewOnlySingleLine" />

        <TextView
            style="@style/ProfileTextViewOnlyTitleTheme"
            android:text="@string/profile_email_label" />

        <TextView
            android:id="@+id/tvEmail"
            style="@style/ProfileTextViewOnlySingleLine" />

        <TextView
            style="@style/ProfileTextViewOnlyTitleTheme"
            android:text="@string/profile_address_label" />

        <TextView
            android:id="@+id/tvAddress1"
            style="@style/ProfileTextViewOnlySingleLine" />


        <TextView
            style="@style/ProfileTextViewOnlyTitleTheme"
            android:text="@string/profile_city_label" />

        <TextView
            android:id="@+id/tvCity"
            style="@style/ProfileTextViewOnlySingleLine" />

        <TextView
            style="@style/ProfileTextViewOnlyTitleTheme"
            android:text="@string/profile_region_label" />

        <TextView
            android:id="@+id/tvState"
            style="@style/ProfileTextViewOnlySingleLine" />

        <!--<Spinner-->
            <!--android:id="@+id/spinnerState"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:ellipsize="end"-->
            <!--android:hint="@string/profile_region_label"-->
            <!--android:maxLines="1"-->
            <!--android:textColor="@color/profile_text_colour" />-->


        <TextView
            style="@style/ProfileTextViewOnlyTitleTheme"
            android:text="@string/profile_country_label" />

        <TextView
            android:id="@+id/tvCountry"
            style="@style/ProfileTextViewOnlySingleLine" />

        <!--<Spinner-->
            <!--android:id="@+id/spinnerCountry"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:ellipsize="end"-->
            <!--android:textAppearance="@style/TextAppearance.AppCompat.Medium"-->
            <!--android:textColor="@color/profile_text_colour" />-->
    </LinearLayout>
</LinearLayout>

</android.support.v4.widget.NestedScrollView>
