<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    style="@style/CardBorderTheme"
    android:id="@+id/layoutHolder" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/CardTheme">

        <TextView
            style="@style/TextTitleBoldTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_name"
            android:id="@+id/order_product_name"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            style="@style/TextTitleBoldTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_price"
            android:id="@+id/order_product_total_price"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true" />

        <TextView
            style="@style/TextTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_id"
            android:id="@+id/order_product_id_title"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/order_product_name" />

        <TextView
            style="@style/TextTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_id"
            android:id="@+id/order_product_id"
            android:layout_toRightOf="@+id/order_product_id_title"
            android:layout_toEndOf="@+id/order_product_id_title"
            android:layout_alignBottom="@id/order_product_id_title"
            android:layout_marginLeft="30dp" />


        <TextView
            style="@style/TextTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_model"
            android:id="@+id/order_product_model_title"
            android:layout_toLeftOf="@+id/order_product_model"
            android:layout_alignBottom="@+id/order_product_id_title"
            android:layout_marginRight="25dp" />

        <TextView
            style="@style/TextTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_model"
            android:id="@+id/order_product_model"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignBottom="@+id/order_product_id_title" />

        <TextView
            style="@style/TextTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_unit_price"
            android:id="@+id/order_product_item_price_title"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/order_product_id_title" />

        <TextView
            style="@style/TextTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_unit_price"
            android:id="@+id/order_product_item_price"
            android:layout_alignLeft="@+id/order_product_id"
            android:layout_alignStart="@+id/order_product_id"
            android:layout_alignBottom="@+id/order_product_item_price_title" />

        <TextView
            style="@style/TextTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_quantity"
            android:id="@+id/order_product_quantity_title"
            android:layout_alignLeft="@+id/order_product_model_title"
            android:layout_alignBottom="@+id/order_product_item_price_title" />

        <TextView
            style="@style/TextTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_quantity"
            android:id="@+id/order_product_quantity"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignBottom="@+id/order_product_item_price_title" />

        <TextView
            style="@style/TextTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_status"
            android:id="@+id/order_product_status_title"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/order_product_item_price_title" />

        <TextView
            style="@style/TextTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_status"
            android:id="@+id/order_product_status"
            android:layout_alignLeft="@+id/order_product_id"
            android:layout_alignStart="@+id/order_product_id"
            android:layout_alignBottom="@+id/order_product_status_title" />

    </RelativeLayout>

</LinearLayout>