<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/lblEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/lblPhone"
        android:layout_alignStart="@+id/lblPhone"
        android:layout_toLeftOf="@+id/admin_phone_line1"
        android:padding="@dimen/activity_horizontal_margin"
        android:text="EMAIL"
        android:textAlignment="textStart"
        android:textStyle="bold"
        android:typeface="normal" />

    <TextView
        android:id="@+id/adminEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_toRightOf="@id/lblEmail"
        android:inputType="none"
        android:padding="@dimen/activity_horizontal_margin"
        android:textIsSelectable="true"
        android:text="@string/admin_email"
        android:typeface="normal"
        />

    <TextView
        android:id="@+id/lblPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/lblEmail"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:padding="@dimen/activity_horizontal_margin"
        android:text="TELEPHONE"
        android:textAlignment="textStart"
        android:textStyle="bold"
        android:typeface="normal" />

    <TextView
        android:id="@+id/admin_phone_line1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/adminEmail"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_toRightOf="@id/lblPhone"
        android:inputType="none"
        android:padding="@dimen/activity_horizontal_margin"
        android:textIsSelectable="true"
        android:text="@string/admin_phone_line1"
        android:typeface="normal" />

    <TextView
        android:id="@+id/admin_phone_line2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/admin_phone_line1"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_toRightOf="@id/lblPhone"
        android:inputType="none"
        android:padding="@dimen/activity_horizontal_margin"
        android:textIsSelectable="true"
        android:text="@string/admin_phone_line2"
        android:typeface="normal" />

</RelativeLayout>